k8s/backend.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 544547773663.dkr.ecr.us-east-1.amazonaws.com/dicom-viewer-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        - containerPort: 11119  # Add this line to expose the DICOM port
---

apiVersion: v1
kind: Service
metadata:
  name: dicom-backend-service
spec:
  selector:
    app: backend    # Changed from 'dicom-backend' to match Deployment labels
  ports:
  - name: http
    protocol: TCP
    port: 5001
    targetPort: 5001
  - name: dicom-cstore
    port: 11119
    targetPort: 11119
  type: ClusterIP

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: dicom-backend-loadbalancer
# spec:
#   selector:
#     app: backend
#   ports:
#   - name: http
#     protocol: TCP
#     port: 5001
#     targetPort: 5001
#   - name: dicom-cstore
#     protocol: TCP
#     port: 11119
#     targetPort: 11119
#   type: LoadBalancer
