k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dicom-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dicom-frontend
  template:
    metadata:
      labels:
        app: dicom-frontend
    spec:
      containers:
      - name: dicom-frontend
        image: 544547773663.dkr.ecr.us-east-1.amazonaws.com/dicom-viewer-frontend:latest #localhost:5000
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dicom-frontend-service
spec:
  selector:
    app: dicom-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

# ---

# # load balancer service for frontend
# apiVersion: v1
# kind: Service
# metadata:
#   name: dicom-frontend-loadbalancer
# spec:
#   selector:
#     app: dicom-frontend
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 80
#   type: LoadBalancer
