k8s/pacs.yaml
# Example of a Deployment in Kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacs
  template:
    metadata:
      labels:
        app: pacs
    spec:
      containers:
      - name: pacs
        image: 544547773663.dkr.ecr.us-east-1.amazonaws.com/dicom-pacs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 104
---
apiVersion: v1
kind: Service
metadata:
  name: pacs-service
spec:
  selector:
    app: pacs
  ports:
  - protocol: TCP
    port: 104
    targetPort: 104
  type: ClusterIP
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pacs-service-loadbalancer
# spec:
#   selector:
#     app: pacs
#   ports:
#   - protocol: TCP
#     port: 104
#     targetPort: 104
#   type: LoadBalancer   # Changed from ClusterIP to LoadBalancer
